framec_tests/language_specific/python/v3_facade_smoke/negative/strict_bad_def_syntax.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B(1)
                def f(: pass  # invalid def syntax
            }
        }
        $B {
        }
}

